[package]
name = "lean-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.7"
leangz = { git = "https://github.com/digama0/leangz.git", version = "0.1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
curl = "0.4"
